--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,6 @@ body{
     color:#ff4c68;
 }
 #testimonials {
-    padding: 7% 15%;
     text-align: center;
     background-color: #ef8172;
     color: #fff;
@@ -76,6 +75,10 @@ body{
 .testimonial-image{
     width: 30%;
     border-radius: 100%;
+}
+
+.carousel-item {
+    padding: 7% 15%;
 }
 
 #press{
@@ -87,4 +90,13 @@ body{
 .press-img{
     width: 15%;
     margin: 20px 20px 50px;
+}
+#pricing {
+    padding: 100px;
+    text-align: center;
+    font-weight: 500;
+}
+
+.pricing-column {
+    padding: 3% 2% 2%;
 }
