--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,28 @@ body{
     padding: 3% 2% 2%;
 }
 
+#cta{
+    background-color: #ff4c68;
+    color: #fff;
+    padding: 7% 15%;
+    text-align: center;
+}
+.cta-heading{
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+#footer{
+    padding: 7% 15%;
+    text-align: center;
+}
+
+.custom-buttons{
+    margin: 5%;
+}
+.footericons{
+    margin: 20px 10px;
+}
 @media (max-width: 1028px){
     #title{
         text-align: center;
